--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,13 +22,16 @@
     <string name="category_date">Fecha</string>
     <string name="hint_pet_birthdate">Fecha de nacimiento</string>
     <string name="category_details">Detalles</string>
-    <string name="hint_pet_details">Otros detalles(...)</string>
+    <string name="hint_pet_details">Otros detalles...</string>
     <string name="category_data">Otros datos</string>
     <string name="ster_category">¿Esterilizado?</string>
     <string name="vacc_category">¿Vacunado?</string>
-    <string name="errorMessageName">Los campos Nombre, Raza y Peso no pueden estar vacíos.</string>
     <string name="yes">Sí</string>
     <string name="no">No</string>
-    <string name="dialog_delete_pet">Vas a marcar el animal como "Adoptado". Sus datos se eliminarán de la base de datos. (Esta opción no se puede deshacer)</string>
+    <string name="dialog_delete_pet">Vas a borrar este animal. Sus datos se eliminarán de la base de datos. (Esta opción no se puede deshacer)</string>
     <string name="dialog_delete_pet_title">"¿Estás segur@? "</string>
+    <string name="category_adopted">¿Adoptado?</string>
+    <string name="hint_date">Fecha</string>
+    <string name="hint_adopted_date">Fecha de la adopción.</string>
+    <string name="not_saved">No se ha guardado. Asegúrate de que los campos "Nombre", "Raza" y "Peso" no están vacíos.</string>
 </resources>
