--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="hint_pet_name_title">Introduce los datos del animal</string>
     <string name="zero">0</string>
     <string name="default_date">01/01/2010</string>
+    <string name="zeroDecimal">0.0</string>
 </resources>
